Base components and styles.

--- a/src/safenote_frontend/src/index.html
+++ b/src/safenote_frontend/src/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>SafeNote</title>
+    <title>Safenote</title>
     <base href="/" />
     <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <main id="app"></main>
+    <div id="app"></div>
   </body>
 </html>
